# OTUS-MLOps

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  clear_data.py  pyproject.toml  pyspark_script.py  terraform.tfstate
.github/workflows/: build_images.yml  main.yaml  main.yml
dags/: data_pipeline.py  data_preprocess.py  model_train.py
dags/airflow/script/: delete_cluster.sh  my_script.sh
docs/hometasks/01/: goal-and-kanban.md
docs/hometasks/02/: billing-analyse.md  hometask2.md
docs/hometasks/03/: hometask3.md
docs/hometasks/04/: hometask04.md  result.txt
docs/hometasks/05/: hometask05.md
docs/hometasks/06/: hometask06.md
docs/hometasks/07/: hometask07.md
docs/hometasks/09/: hometask09.md
feature-store/: pyproject.toml
feature-store/otus_mlops_feature_store/feature_repo/: example_repo.py  feature_store.yaml  test_workflow.py
feature-store/otus_mlops_feature_store/feature_repo/data/: driver_stats.parquet  driver_stats_with_productivity.parquet  online_store.db  registry.db
helm/fraud/: Chart.yaml  values.yaml
helm/fraud/templates/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
infra/: main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
infra/.terraform/modules/: modules.json
infra/dataproc/: main.tf  variables.tf
infra/dataproc/network/: main.tf  outputs.tf  variables.tf
infra/fastapi/: Dockerfile
infra/main/: main.tf  providers.tf  variables.tf
infra/main/managing_proxy/: main.tf  variables.tf
infra/main/managing_proxy/network/: main.tf  outputs.tf  variables.tf
infra/main/scripts/: kube_setup.sh  prepare_cluster.sh  proxy_setup.sh  setup_feature_store.sh
infra/main/storage/: outputs.tf  variables.tf
infra/remote/dataproc/: main.tf  variables.tf
infra/remote/scripts/: dataproc_setup_script.sh
infra/scripts/: dataproc_setup_script.sh  proxy_setup.sh  upload_data_to_hdfs.sh  user_data.sh
infra/src/: docker-compose.yaml
infra/storage/: main.tf
src/otus-mlops/internals/data/: _base.py
src/otus-mlops/internals/data/analysers/: _tf.py  (+1 more)
src/otus-mlops/internals/interfaces/: i_data_analyser.py  i_data_loader.py
src/otus-mlops/scripts/: analyse_data.py
src/otus_mlops/fast_api/: application.py  fast_api.sh
src/otus_mlops/helpers/: common.py
src/otus_mlops/internals/data/: _base.py
src/otus_mlops/internals/interfaces/: __init__.py  _base.py  base.py  i_data_analyser.py  i_data_loader.py  i_data_preprocessor.py  i_remote_client.py
src/otus_mlops/internals/preprocess/: _evidently.py
src/otus_mlops/remote/: object_storage_client.py
src/otus_mlops/scripts/: ab_test.py  analyse_data.py  clean_data.py  clear_data.py  model_train.py  prepare_test_model.py
src/otus_mlops/scripts/remote/: ab_test.py  clear_data.py  model_train.py
src/utils/: make_venv.sh  push_secrets.py
(+13 files in other folders)
