[project]
name = "otus-mlops"
version = "0.1.0"
description = "MLOps Otus Repo For Hometasks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "findspark>=2.0.1",
    "pyspark>=3.0.3",
    "strenum>=0.4.15",
    "tqdm>=4.67.1",
]

[dependency-groups]
data-analyse = [
    "evidently>=0.7.6",
]
# need at least 3.9 interpreter version
# dev = [
#     "black>=25.1.0",
#     "mypy>=1.16.0",
#     "pandas-stubs>=2.2.3.250527",
#     "pre-commit>=4.2.0",
#     "types-tqdm>=4.67.0.20250516",
# ]

