[project]
name = "otus_mlops"
version = "0.1.0"
description = "MLOps Otus Repo For Hometasks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3===1.35.83",
    "botocore==1.35.83",
    "findspark>=2.0.1",
    "pyspark==3.0.3",
    "strenum>=0.4.15",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
data-analyse = [
    "evidently>=0.7.6",
    "matplotlib>=3.7.5",
    "ruptures>=1.1.9",
]
train = [
    "mlflow>=2.17.2",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
]

[dependency-groups]
github_secrets = [
    "dotenv>=0.9.9",
    "pynacl>=1.5.0",
    "requests>=2.32.4",
]
# need at least 3.9 interpreter version
# dev = [
#     "black>=25.1.0",
#     "mypy>=1.16.0",
#     "pandas-stubs>=2.2.3.250527",
#     "pre-commit>=4.2.0",
#     "types-tqdm>=4.67.0.20250516",
# ]


# [[tool.uv.index]]
# name = "brusia-index"
# url = "https://brusia.github.io/github-hosted-pypi/"
